--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.8.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-static-safe-area-insets": "^2.2.0",
