--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@shopify/react-native-skia": "^0.1.165",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-orientation-locker": "^1.5.0",
