--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "react": "18.0.0",
     "react-native": "0.69.7",
     "react-native-orientation-locker": "^1.5.0",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "2.10.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-static-safe-area-insets": "^2.2.0",
+    "react-native-svg": "^13.6.0",
     "react-native-usb": "^0.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "2.14.1",
-    "rn-perfect-sketch-canvas": "^0.3.0",
     "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
