--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint .",
     "build-android-debug-prep": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "build-android-debug-real": "cd android && ./gradlew assembleDebug",
+    "save-changes-before-update": "savechanges.bat",
     "copy-changes-after-update": "applychanges.bat"
   },
   "dependencies": {
