--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
+        
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
@@ -36,6 +37,12 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+     <!--    <intent-filter>
+            <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
+        </intent-filter>
+
+        <meta-data android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" -->
+        android:resource="@xml/device_filter" />
       </activity>
     </application>
 </manifest>
