--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@sayem314/react-native-keep-awake": "^1.1.0",
     "@shopify/react-native-skia": "^0.1.165",
     "react": "18.0.0",
     "react-native": "0.69.7",
