--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.0.0",
     "react-native": "0.69.7",
     "react-native-device-info": "^10.6.0",
+    "react-native-external-keyboard": "^0.2.8",
     "react-native-fs": "^2.20.0",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-qrcode-svg": "^6.1.2",
